--- a/Debug/makefile
+++ b/Debug/makefile
@@ -61,8 +61,8 @@ all: main-build
 main-build: SST_ADC.elf secondary-outputs
 
 # Tool invocations
-SST_ADC.elf: $(OBJS) $(USER_OBJS) D:\GitHub\SST_ADC\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "SST_ADC.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\GitHub\SST_ADC\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="SST_ADC.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+SST_ADC.elf: $(OBJS) $(USER_OBJS) D:\GitHub\SST_ADC\STM32_feature_testing\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "SST_ADC.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\GitHub\SST_ADC\STM32_feature_testing\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="SST_ADC.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
